# iris

./: Cargo.toml  README.md
src/: env.rs  git.rs  gpt.rs  main.rs  string.rs
src/cli/: edit.rs  init.rs  input.rs  list.rs  mod.rs  new.rs
